Export types, add npmignore

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "@novas/styled-system",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "Smaller faster rewrite of styled-system",
 	"module": "dist/styled-system.esm.js",
+	"types": "dist/index.d.ts",
 	"repository": "https://github.com/codynova/styled-system",
 	"author": "Cody Persinger <codypersinger@gmail.com> (https://github.com/codynova)",
 	"license": "MIT",
